# aider-gh-cli

./: .gitignore  README.md  pyproject.toml
aider_gh_cli/: __init__.py  cli.py  gh_utils.py  git_utils.py  template.py
tests/: test_cli.py  test_gh_utils.py  test_git_utils.py  test_template.py
