[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "aider-gh-cli"
version = "0.1.0"
description = "CLI tool to collect branch changes and create GitHub PRs from a template"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "click>=8.0",
]

[project.scripts]
aider-gh-cli = "aider_gh_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aider_gh_cli*"]
